--- a/ansible_configuration/hosts.ini
+++ b/ansible_configuration/hosts.ini
@@ -1,14 +1,9 @@
 [k8s_master]
-23.99.12.197
-
-[k8s_master:vars]
-ansible_user=azureuser
-# ansible_password=__
-ansible_ssh_private_key_file=~/.ssh/1_5-2_vms
+master-node ansible_host=104.210.37.77
 
 [k8s_nodes]
-23.99.85.75
+worker-node-1 ansible_host=104.210.37.253
 
-[k8s_nodes:vars]
+[all:vars]
 ansible_user=azureuser
 ansible_ssh_private_key_file=~/.ssh/1_5-2_vms
