--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,13 +1,28 @@
-FROM node:23-alpine3.20
+FROM node:23-alpine3.21 AS builder
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src/cron-app/
 
-COPY package*.json ./
+COPY package*.json .
 
-RUN npm ci --only=production
+RUN npm install
 
 COPY . .
 
+RUN npm test
+RUN npm run lint
+
+
+# Final stage
+FROM node:23-alpine3.21
+
+WORKDIR /usr/src/cron-app/
+
+COPY --from=builder package*.json .
+COPY --from=builder cron.js .
+
+RUN npm ci --only=production
+
 EXPOSE 8080
+
 
 CMD [ "node", "cron.js" ]
