--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -36,7 +36,7 @@ jobs:
         id: metadata
         uses: docker/metadata-action@v3
         with:
-          images: ${{ env.REGISTRY }}%${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
       
       - name: Build and push Docker image
         id: push
@@ -50,6 +50,6 @@ jobs:
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
         with:
-          subject-name: ${{ env.REGISTRY /${{ env.IMAGE_NAME }}}}
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}}}
           subject-dijest: ${{ steps.push.ouputs.digest }}
           push-to-registry: true
