--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -44,7 +44,8 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta-outputs.tags }}
+          tags: user/cron_app:latest
+          # tags: ${{ steps.meta-outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
       
       - name: Generate artifact attestation
