--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -7,7 +7,11 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  USERNAME: facuhannoch
+  GH_PATH: secrets.GH_PAT
+  IMAGE_NAME: cron_app
+  # IMAGE_NAME: ${{ github.repository }}
+
 
 jobs:
 
@@ -25,33 +29,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Log in to the Container registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Login into GitHub
+        working-directory: app
+        run: docker login --username ${{ env.USERNAME }} --password ${{ env.GH_PAT }} ${{ env.REGISTRY }}
       
-      - name: Extract metadata for docker
-        id: metadata
-        uses: docker/metadata-action@v3
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+      - name: Build Docker image
+        working-directory: app
+        run: docker build -t ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.CONTAINER_NAME }}:latest .
       
-      - name: Build and push Docker image
-        id: push
-        uses: docker/build-push-action@v6
-        with:
-          context: ./src
-          file: ./src/Dockerfile
-          push: true
-          tags: user/cron_app:latest
-          # tags: ${{ steps.meta-outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+      - name: Push Docker image
+        run: docker push ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.CONTAINER_NAME }}:latest
       
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v2
-        with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}}}
-          subject-dijest: ${{ steps.push.ouputs.digest }}
-          push-to-registry: true
