--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -30,11 +30,10 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Login into GitHub
-        working-directory: app
         run: docker login --username ${{ env.USERNAME }} --password ${{ env.GH_PAT }} ${{ env.REGISTRY }}
       
       - name: Build Docker image
-        working-directory: app
+        working-directory: src
         run: docker build -t ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.CONTAINER_NAME }}:latest .
       
       - name: Push Docker image
