--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -8,7 +8,6 @@ on:
 env:
   REGISTRY: ghcr.io
   USERNAME: facuhannoch
-  GH_PATH: secrets.GH_PAT
   IMAGE_NAME: cron_app
   # IMAGE_NAME: ${{ github.repository }}
 
@@ -30,12 +29,12 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Login into GitHub
-        run: docker login --username ${{ env.USERNAME }} --password ${{ env.GH_PAT }} ${{ env.REGISTRY }}
+        run: echo "${{ secrets.GH_PAT }}" | docker loggin ghrc.io -u ${{ env.USERNAME }} --password-stdin
       
       - name: Build Docker image
         working-directory: src
-        run: docker build -t ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.CONTAINER_NAME }}:latest .
+        run: docker build -t ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}:latest .
       
       - name: Push Docker image
-        run: docker push ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.CONTAINER_NAME }}:latest
+        run: docker push ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}:latest
       
