--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Login into GitHub
-        run: echo "${{ secrets.GH_PAT }}" | docker login ghrc.io --username ${{ env.USERNAME }} --password-stdin
+        run: echo "${{ secrets.GH_PAT }}" | docker login ghcr.io --username ${{ env.USERNAME }} --password-stdin
       
       - name: Build Docker image
         working-directory: src
