--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -40,7 +40,7 @@ jobs:
             --cache-from=type=registry,ref=${{ env.REGISTRY }}/${{ env.USERNAME }}/{{ env.IMAGE_NAME }}:latest \
             --cache-to=type=inline \
             -t ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}:latest \
-            -t ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+            -t ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} .
         # So we now always have a versioned image (commit-hash) alongside latest
         
       
