--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -29,27 +29,27 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Login into GitHub
-        # run: echo "${{ secrets.GH_PAT }}" | docker login ghcr.io --username ${{ env.USERNAME }} --password-stdin
-        run: |
-          USERNAME_LOWER=$(echo "${{ env.USERNAME }}" | tr '[:upper:]' '[:lower:]')
-          echo "${{ secrets.GITHUB_TOKEN }}" docker login ghcr.io --username $USERNAME_LOWER --password-stdin
+        run: echo "${{ secrets.GH_PAT }}" | docker login ghcr.io --username ${{ env.USERNAME }} --password-stdin
+        # run: |
+        #   USERNAME_LOWER=$(echo "${{ env.USERNAME }}" | tr '[:upper:]' '[:lower:]')
+        #   echo "${{ secrets.GITHUB_TOKEN }}" docker login ghcr.io --username $USERNAME_LOWER --password-stdin
       
       - name: Build Docker image
         working-directory: src
-        # run: docker build -t ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}:latest .
-        run: |
-          USERNAME_LOWER=$(echo "${{ env.USERNAME }}" | tr '[:upper:]' '[:lower:]')
-          docker build \
-            --cache-from=type=registry,ref=${{ env.REGISTRY }}/${USERNAME_LOWER}/${{ env.IMAGE_NAME }}:latest \
-            --cache-to=type=inline \
-            -t ${{ env.REGISTRY }}/${USERNAME_LOWER}/${{ env.IMAGE_NAME }}:latest \
-            -t ${{ env.REGISTRY }}/${USERNAME_LOWER}/${{ env.IMAGE_NAME }}:${{ github.sha }} .
-        # So we now always have a versioned image (commit-hash) alongside latest
-        
-      
+        run: docker build -t ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}:latest .
+        # run: |
+        #   USERNAME_LOWER=$(echo "${{ env.USERNAME }}" | tr '[:upper:]' '[:lower:]')
+        #   docker build \
+        #     --cache-from=type=registry,ref=${{ env.REGISTRY }}/${USERNAME_LOWER}/${{ env.IMAGE_NAME }}:latest \
+        #     --cache-to=type=inline \
+        #     -t ${{ env.REGISTRY }}/${USERNAME_LOWER}/${{ env.IMAGE_NAME }}:latest \
+        #     -t ${{ env.REGISTRY }}/${USERNAME_LOWER}/${{ env.IMAGE_NAME }}:${{ github.sha }} .
+        # # So we now always have a versioned image (commit-hash) alongside latest
+              
       - name: Push Docker image
-        run: |
-          USERNAME_LOWER=$(echo "${{ env.USERNAME }}" | tr '[:upper:]' '[:lower:]')
-          docker push ${{ env.REGISTRY }}/${USERNAME_LOWER}/${{ env.IMAGE_NAME }}:latest
-          docker push ${{ env.REGISTRY }}/${USERNAME_LOWER}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+        run: docker push ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}:latest
+        # run: |
+        #   USERNAME_LOWER=$(echo "${{ env.USERNAME }}" | tr '[:upper:]' '[:lower:]')
+        #   docker push ${{ env.REGISTRY }}/${USERNAME_LOWER}/${{ env.IMAGE_NAME }}:latest
+        #   docker push ${{ env.REGISTRY }}/${USERNAME_LOWER}/${{ env.IMAGE_NAME }}:${{ github.sha }}
       
