Optimized terraform code, made it more scalable and readable, while less verbose. Use of variables in tf.main. Use of a rules.json file to declare the ssh rules instead of hardcoding them into the terraform files. Created python file to chain terraform provisioning and ansible configuration.
Project successfully provisions infrastructure and dynamically creates a hosts.ini inventory file.

--- a/ansible_configuration/hosts.ini
+++ b/ansible_configuration/hosts.ini
@@ -1,9 +1,6 @@
-[k8s_master]
-master-node ansible_host=104.210.37.77
+[master]
+vm-control-plane ansible_host=172.184.130.188
 
-[k8s_nodes]
-worker-node-1 ansible_host=104.210.37.253
+[worker]
+vm-node ansible_host=52.159.151.19
 
-[all:vars]
-ansible_user=azureuser
-ansible_ssh_private_key_file=~/.ssh/1_5-2_vms
