Terraform ✓ Ansible ✓ Workflow from provisioning to Kubernetes cluster fully configured and running now tested and completed.

--- a/ansible_configuration/hosts.ini
+++ b/ansible_configuration/hosts.ini
@@ -1,6 +1,9 @@
 [master]
-vm-control-plane ansible_host=172.184.130.188
+vm-control-plane ansible_host=13.91.255.118
 
 [worker]
-vm-node ansible_host=52.159.151.19
+vm-node ansible_host=20.43.246.160
 
+[all:vars]
+ansible_user=azureuser
+ansible_ssh_private_key_file=~/.ssh/1_5-2_vms
