--- a/kubernetes/app/cron-app-deployment.yaml
+++ b/kubernetes/app/cron-app-deployment.yaml
@@ -8,7 +8,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: cron
+      app: cron-app
   template:
     metadata:
       labels:
@@ -19,7 +19,6 @@ spec:
         image: ghcr.io/facuhannoch/cron_app:latest
         ports:
           - containerPort: 8082
-            name: cron-app-api-port
         env:
           - name: DB_URL # mongo_uri
             value: mongodb://mongodb-service:27017
