--- a/kubernetes/app/cron-app-service.yaml
+++ b/kubernetes/app/cron-app-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: cron-service
   labels:
-    app: cron
+    app: cron-app
 spec:
   selector:
     app: cron-app
@@ -12,4 +12,4 @@ spec:
     - name: http
       protocol: TCP
       port: 8083
-      targetPort: cron-app-api-port
+      targetPort: 8082
