--- a/kubernetes/db-easy/mongodb-deployment.yaml
+++ b/kubernetes/db-easy/mongodb-deployment.yaml
@@ -13,7 +13,7 @@ spec:
         app: mongodb
     spec:
       containers:
-        - name: mongodb_app
+        - name: mongodb
           image: mongo:7.0
           ports:
             - name: defaultPort
