--- a/kubernetes/db-prod/mongo-headless-service.yaml
+++ b/kubernetes/db-prod/mongo-headless-service.yaml
@@ -12,4 +12,4 @@ spec:
     - name: mongo
       protocol: TCP
       port: 27017
-      targetPort: mongodb-default-port
+      targetPort: mongo-port
