--- a/kubernetes/app/cron-app-deployment.yaml
+++ b/kubernetes/app/cron-app-deployment.yaml
@@ -12,7 +12,7 @@ spec:
   template:
     metadata:
       labels:
-        app: cron
+        app: cron-app
     spec:
       containers:
       - name: cron
